# kellerai-coderabbit

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  REPOSITORY_SETUP.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/commands/: coderabbit-review.md  cr-cycle.md  cr-fix.md  cr-review-commit.md  cr-review.md
.github/scripts/: generate-compliance-report.py
.github/workflows/: compliance-reporting.yml  config-test.yml  deploy-notification.yml  kb-validation.yml  performance-monitoring.yml  quality-gate-notifications.yml  quality-gate-status.yml  yaml-validation.yml
.serena/: project.yml
.serena/memories/: architecture-and-integration-strategy.md  coderabbit-project-overview.md  implementation-roadmap.md  key-technologies-and-patterns.md  spawn_coordination_tasks_14_15_16.md  task_14_coderabbit_command_content.md  task_14_completion_report.md  tasks_14_15_16_completion_summary.md
.taskmaster/: CLAUDE.md  config.json  state.json
.taskmaster/docs/: kellerai-coderabbit-integration-prd.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
docs/: CLI_USAGE_GUIDE.md  CONTRIBUTING.md  MODERNIZATION_SUMMARY.md  PROJECT_STATUS.md  PROJECT_STRUCTURE_ANALYSIS.md  QUALITY_GATES_QUICK_REFERENCE.md  README.md  RUFF_MIGRATION_SUMMARY.md  claude-integration.md  prompt-templates.md  quality-checks-guide.md  troubleshooting.md
docs/architecture/: central-config.md  integration-overview.md  mcp-servers.md
docs/configuration/: CENTRAL_REPOSITORY_README.md  configuration-inheritance.md  linear-authentication-setup.md  slack-integration-setup.md
docs/guides/: team-linear-workflow.md
docs/knowledge-base/llm-txt-sources/: awesome-coderabbit.txt  dotfiles.txt  lancedb-test-connection.txt
docs/monitoring/: compliance-dashboard-setup.md  mcp-optimization-guide.md  performance-metrics-baseline.md
docs/processes/: continuous-improvement-process.md
docs/quality-gates/: premerge-checks.md
docs/research/: best-practices.md  issue-tracking-evaluation.md  language-configs.md
docs/standards/: approved-patterns.yaml  coding-standards.yaml  team-preferences.yaml
docs/summaries/: .gitkeep  MCP_SERVERS_IMPLEMENTATION_SUMMARY.md  TASK_11_IMPLEMENTATION_SUMMARY.md  TASK_12_IMPLEMENTATION_SUMMARY.md  TASK_13_IMPLEMENTATION_SUMMARY.md
docs/workflows/: cli-integration.md  escalation-procedures.md  knowledge-base-versioning.md  linear-bidirectional-sync.md  override-process-guide.md  request-changes-enforcement.md
knowledge-base/: CLAUDE.md  PERFORMANCE_GUIDELINES.md  README.md  SECURITY_STANDARDS.md
knowledge-base/cursorrules/: .cursorrules-python  .cursorrules-react  .cursorrules-typescript
knowledge-base/organizational-patterns/: patterns.yaml
mcp-servers/context7/: INTEGRATION_CHECKLIST.md  README.md
mcp-servers/context7/test-examples/: test_fastapi_async.py  test_pandas_performance.py  test_requests_security.py
mcp-servers/documentation/: EVALUATION.md
mcp-servers/documentation/confluence/: README.md
mcp-servers/documentation/notion/: README.md
mcp-servers/infrastructure/: caching-and-resilience.md  deployment-guide.md  health-check.sh  test-integration.sh
mcp-servers/kellerai-standards/: README.md
mcp-servers/kellerai-standards/src/: server.py
quality-checks/: README.md  __init__.py  architecture_checks.py  breaking_changes_checks.py  performance_checks.py  quality_orchestrator.py  security_checks.py  test_coverage_checks.py
quality-checks/tests/: test_architecture_checks.py  test_breaking_changes_checks.py  test_performance_checks.py  test_quality_orchestrator.py  test_security_checks.py  test_test_coverage_checks.py
scripts/: create-feature-branch.sh  open-repoprompt.sh  test-linear-auth.sh  validate-kb-versions.py  verify-changelog.py
templates/: README.md
templates/nodejs/: .coderabbit.yaml
templates/python/: .coderabbit.yaml
templates/react/: .coderabbit.yaml
templates/typescript/: .coderabbit.yaml
